--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@
   top: 40%;
 }
 #output ul li {
-  border: 1px solid rgb(219, 219, 219);
+  /* border: 1px solid rgb(219, 219, 219); */
   margin-left: -30px;
 }
 #output .user_top_img img {
@@ -283,7 +283,7 @@ header .icon_field ul li:nth-child(5)::after {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-#section_two .main .user_section::after {
+/* #section_two .main .user_section::after {
   content: "New post";
   position: absolute;
   background: white;
@@ -298,7 +298,7 @@ header .icon_field ul li:nth-child(5)::after {
   box-shadow: 0 0 10px rgb(218, 218, 218);
   font-weight: bold;
   font-size: 12px;
-}
+} */
 #section_two .main .instagram_post .user_section ul {
   margin-left: 10px;
   margin-bottom: 0px;
@@ -382,7 +382,8 @@ header .icon_field ul li:nth-child(5)::after {
   position: relative;
 }
 #section_two .main .instagram_post .user_section ul li:last-child::after {
-  content: ">";
+  content: "\f105";
+  font-family: "Font Awesome 6 Free";
   position: absolute;
   width: 30px;
   height: 30px;
@@ -481,6 +482,7 @@ header .icon_field ul li:nth-child(5)::after {
   text-decoration: none;
   font-size: 14px;
   font-weight: bold;
+  text-transform: capitalize;
 }
 .user_section_two .main_user_ul {
   width: 100% !important;
@@ -511,8 +513,8 @@ header .icon_field ul li:nth-child(5)::after {
 }
 .user_section_two span {
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 12px;
-  color: #8e8e8e;
+  color: #C7C7C7;
   margin-left: 10px;
 }
